--- a/index.css
+++ b/index.css
@@ -1,13 +1,39 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap");
 * {
-	-webkit-box-sizing: border-box;
-	box-sizing: border-box;
-	font-family: 'Roboto Mono', monospace;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  font-family: 'Roboto Mono', monospace;
 }
 
 html {
-	margin: 0;
-	padding: 0;
-	color: red;
+  margin: 0;
+  padding: 0;
+  color: red;
+}
+
+h1 {
+  color: #326dee;
+}
+
+a {
+  color: #1ac888;
+}
+
+button {
+  color: white;
+  border: 0;
+  border-style: solid;
+}
+
+.error {
+  color: #d32752;
+  border-color: #d32752;
+  border-style: solid;
+}
+
+.notification {
+  color: #1ac888;
+  border-color: #1ac888;
+  border-style: solid;
 }
 /*# sourceMappingURL=index.css.map */
