--- a/index.scss
+++ b/index.scss
@@ -1,13 +1,47 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');
 
-
 * {
 	box-sizing: border-box;
-font-family: 'Roboto Mono', monospace;
+	font-family: 'Roboto Mono', monospace;
 }
 
 html {
 	margin: 0;
 	padding: 0;
 	color: red;
+}
+
+// variables
+
+// theme colors
+
+$primary: #326dee;
+$secondary: #1ac888;
+$error: #d32752;
+$info: #f6c32c;
+
+h1 {
+	color: $primary;
+}
+
+a {
+	color: $secondary;
+}
+
+button {
+	color: white;
+	border: 0;
+	border-style: solid;
+}
+
+.error {
+	color: $error;
+	border-color: $error;
+	border-style: solid;
+}
+
+.notification {
+	color: $secondary;
+	border-color: $secondary;
+	border-style: solid;
 }
