--- a/index.css
+++ b/index.css
@@ -13,6 +13,7 @@ html {
 
 h1 {
   color: #326dee;
+  margin-bottom: 0.75rem;
 }
 
 a {
@@ -23,17 +24,25 @@ button {
   color: white;
   border: 0;
   border-style: solid;
+  border-radius: 20px;
+  padding: 0.75rem;
 }
 
 .error {
   color: #d32752;
   border-color: #d32752;
   border-style: solid;
+  margin: 0.75rem;
+  border-radius: 20px;
+  border-width: 1px;
 }
 
 .notification {
   color: #1ac888;
   border-color: #1ac888;
   border-style: solid;
+  margin: 0.75rem;
+  border-radius: 20px;
+  border-width: 1px;
 }
 /*# sourceMappingURL=index.css.map */
