--- a/index.scss
+++ b/index.scss
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');
 
+@import 'variables';
+
 * {
 	box-sizing: border-box;
 	font-family: 'Roboto Mono', monospace;
@@ -10,25 +12,6 @@ html {
 	padding: 0;
 	color: red;
 }
-
-// variables
-
-// theme colors
-
-$primary: #326dee;
-$secondary: #1ac888;
-$error: #d32752;
-$info: #f6c32c;
-
-// spacing
-
-$base-padding: 0.75rem;
-$base-margin: 0.75rem;
-
-//borders
-
-$base-border-thickness: 1px;
-$base-border-radius: 20px;
 
 h1 {
 	color: $primary;
