--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,4 +1,3 @@
-
 // variables
 
 // theme colors
@@ -7,6 +6,7 @@ $primary: #326dee;
 $secondary: #1ac888;
 $error: #d32752;
 $info: #f6c32c;
+$background: rgb(146, 153, 165);
 
 // spacing
 
@@ -17,3 +17,9 @@ $base-margin: 0.75rem;
 
 $base-border-thickness: 1px;
 $base-border-radius: 20px;
+
+//box-shadow
+$base-box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.1);
+
+//font-size
+$base-font-size: 1rem;
