--- a/sass/index.css
+++ b/sass/index.css
@@ -3,6 +3,7 @@
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   font-family: 'Roboto Mono', monospace;
+  background-color: #9299a5;
 }
 
 html {
@@ -18,6 +19,32 @@ h1 {
 
 a {
   color: #1ac888;
+}
+
+.test {
+  color: #1ac888;
+}
+
+.card {
+  display: block;
+  padding: 0.75rem;
+  border: 1px solid #ddd;
+  -webkit-box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.1);
+          box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.1);
+}
+
+.card .card-title {
+  font-size: 1rem;
+  padding-bottom: 0.75rem;
+  font-weight: bold;
+}
+
+.card .card-body {
+  font-size: 1rem;
+}
+
+.card a {
+  text-decoration: underline;
 }
 
 button {
