--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -16,10 +16,14 @@ $base-margin: 0.75rem;
 //borders
 
 $base-border-thickness: 1px;
-$base-border-radius: 20px;
+$base-border-radius: 40px;
 
 //box-shadow
 $base-box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.1);
 
 //font-size
 $base-font-size: 1rem;
+$font-size-em: $base-font-size * 0.75;
+$base-font-lg: $base-font-size * 1.5;
+
+ 
