--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -1,8 +1,11 @@
+@use 'sass;math';
+
 .card {
 	display: block;
 	padding: $base-padding;
 	border: $base-border-thickness solid #ddd;
 	box-shadow: $base-box-shadow;
+	border-radius: math.div($base-border-radius, 4);
 
 	.card-title {
 		font-size: $base-font-size;
@@ -11,10 +14,14 @@
 	}
 
 	.card-body {
-		font-size: $base-font-size;
+		font-size: $base-font-lg;
 	}
 
 	a {
 		text-decoration: underline;
 	}
 }
+
+@debug 'Hi to John';
+@debug math.div(10, 3);
+@debug math.floor(2.6);
