--- a/sass/index.css
+++ b/sass/index.css
@@ -1,75 +1,76 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');
 * {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  font-family: 'Roboto Mono', monospace;
-  background-color: #9299a5;
+	-webkit-box-sizing: border-box;
+	box-sizing: border-box;
+	font-family: 'Roboto Mono', monospace;
+	background-color: #9299a5;
 }
 
 html {
-  margin: 0;
-  padding: 0;
-  color: red;
+	margin: 0;
+	padding: 0;
+	color: red;
 }
 
 h1 {
-  color: #326dee;
-  margin-bottom: 0.75rem;
+	color: #326dee;
+	margin-bottom: 0.75rem;
 }
 
 a {
-  color: #1ac888;
+	color: #1ac888;
 }
 
 .test {
-  color: #1ac888;
+	color: #1ac888;
 }
 
 .card {
-  display: block;
-  padding: 0.75rem;
-  border: 1px solid #ddd;
-  -webkit-box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.1);
-          box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.1);
+	display: block;
+	padding: 0.75rem;
+	border: 1px solid #ddd;
+	-webkit-box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.1);
+	box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.1);
+	/* border-radius: 10px; */
 }
 
 .card .card-title {
-  font-size: 1rem;
-  padding-bottom: 0.75rem;
-  font-weight: bold;
+	font-size: 1rem;
+	padding-bottom: 0.75rem;
+	font-weight: bold;
 }
 
 .card .card-body {
-  font-size: 1rem;
+	font-size: 1.5rem;
 }
 
 .card a {
-  text-decoration: underline;
+	text-decoration: underline;
 }
 
 button {
-  color: white;
-  border: 0;
-  border-style: solid;
-  border-radius: 20px;
-  padding: 0.75rem;
+	color: white;
+	border: 0;
+	border-style: solid;
+	border-radius: 20px;
+	padding: 0.75rem;
 }
 
 .error {
-  color: #d32752;
-  border-color: #d32752;
-  border-style: solid;
-  margin: 0.75rem;
-  border-radius: 20px;
-  border-width: 1px;
+	color: #d32752;
+	border-color: #d32752;
+	border-style: solid;
+	margin: 0.75rem;
+	border-radius: 20px;
+	border-width: 1px;
 }
 
 .notification {
-  color: #1ac888;
-  border-color: #1ac888;
-  border-style: solid;
-  margin: 0.75rem;
-  border-radius: 20px;
-  border-width: 1px;
+	color: #1ac888;
+	border-color: #1ac888;
+	border-style: solid;
+	margin: 0.75rem;
+	border-radius: 20px;
+	border-width: 1px;
 }
 /*# sourceMappingURL=index.css.map */
